--- a/src/app/lecturer/lecturer-profile/lecturer-profile.page.html
+++ b/src/app/lecturer/lecturer-profile/lecturer-profile.page.html
@@ -60,7 +60,7 @@
       <ion-row>
         <ion-col size-sm="8" offset-sm="2">
           <ion-item>
-            <ion-label position="floating">Password</ion-label>
+            <ion-label position="floating">Current Password</ion-label>
             <ion-input formControlName="password" type="password"></ion-input>
           </ion-item>
         </ion-col>
